--- a/media-algorithms-in-action/src/styles.css
+++ b/media-algorithms-in-action/src/styles.css
@@ -1,2 +1,53 @@
-.name-form {
+.header {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.tooltip-inner {
+    max-width: 600px !important; 
+}
+
+.content {
+ padding-top: 25px;
+ padding-bottom: 50px;
+ font-family: 'Courier New', Courier, monospace;
+}
+
+.container-1 {
+    background-color: #FAFDF3;
+    width: 100%;
+}
+
+.container-2 {
+    background-color: #F4ECD8;
+
+}
+
+.container-3 {
+    background-color: beige;
+
+}
+
+.container-4 {
+    background-color: #EFE7DB;
+
+}
+
+.bttn {
+    padding-top: 25px;
+    padding-bottom: 25px; 
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.btm-header{
+    padding-top: 50px;
+    padding-bottom: 25px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.analysis {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-family: 'Courier New', Courier, monospace;
 }
