--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,13 @@
 
 }
 
+.tv {
+    font-size: small;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
 .bttn {
     padding-top: 25px;
     padding-bottom: 25px; 
@@ -42,6 +49,11 @@
 
 .btm-header{
     padding-top: 50px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.btm-txt{
+    padding-top: 10px;
     padding-bottom: 25px;
     font-family: 'Courier New', Courier, monospace;
 }
